tests/snapshots/yaml_suite_snapshots__yaml_suite_6XDY_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Two document start markers
  from: "@perlpunk"
  tags: header
  yaml: "---\n---\n"
  tree: "+STR\n +DOC ---\n  =VAL :\n -DOC\n +DOC ---\n  =VAL :\n -DOC\n-STR\n"
  json: "null\nnull\n"
  dump: "---\n---\n"
