tests/snapshots/yaml_suite_snapshots__yaml_suite_6XDY_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "---\n---\n"
  from: "@perlpunk"
  json: "null\nnull\n"
  name: Two document start markers
  tags: header
  tree: "+STR\n +DOC ---\n  =VAL :\n -DOC\n +DOC ---\n  =VAL :\n -DOC\n-STR\n"
  yaml: "---\n---\n"
