tests/snapshots/yaml_suite_snapshots__yaml_suite_735Y_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Spec Example 8.20. Block Node Types
  from: "http://www.yaml.org/spec/1.2/spec.html#id2799426"
  tags: comment double spec folded tag
  yaml: "-\n  \"flow in block\"\n- >\n Block scalar\n- !!map # Block collection\n  foo : bar\n"
  tree: "+STR\n +DOC\n  +SEQ\n   =VAL \"flow in block\n   =VAL >Block scalar\\n\n   +MAP <tag:yaml.org,2002:map>\n    =VAL :foo\n    =VAL :bar\n   -MAP\n  -SEQ\n -DOC\n-STR\n"
  json: "[\n  \"flow in block\",\n  \"Block scalar\\n\",\n  {\n    \"foo\": \"bar\"\n  }\n]\n"
  dump: "- \"flow in block\"\n- >\n  Block scalar\n- !!map\n  foo: bar\n"
