tests/snapshots/yaml_suite_snapshots__yaml_suite_735Y_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "- \"flow in block\"\n- >\n  Block scalar\n- !!map\n  foo: bar\n"
  from: "http://www.yaml.org/spec/1.2/spec.html#id2799426"
  json: "[\n  \"flow in block\",\n  \"Block scalar\\n\",\n  {\n    \"foo\": \"bar\"\n  }\n]\n"
  name: Spec Example 8.20. Block Node Types
  tags: comment double spec folded tag
  tree: "+STR\n +DOC\n  +SEQ\n   =VAL \"flow in block\n   =VAL >Block scalar\\n\n   +MAP <tag:yaml.org,2002:map>\n    =VAL :foo\n    =VAL :bar\n   -MAP\n  -SEQ\n -DOC\n-STR\n"
  yaml: "-\n  \"flow in block\"\n- >\n Block scalar\n- !!map # Block collection\n  foo : bar\n"
